[package]
name = "kvs"
auther = ["Ray <swarm0721@gmail.com>"]
version = "0.1.0"
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.0"
clap = { version = "4.4.5", features = ["derive", "cargo"] }
predicates = "1.0.0"

[[bin]]
name = "kvs"
path = "src/bin/kvs.rs"
